Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.0 Alpha, 5.12.0 Beta 1, 5.12.0 Beta 2
-
None
-
-
20238f2c472af7b94d48a837d7723a209a87fd9e (qt/qtwebengine/5.12)
Description
Middle click no longer works in QWebEngine Qt 5.12
Used simplebrowser demo
On screen recording attached compared 5.11.2 and 5.12
Attachments
Issue Links
- replaces
-
QTBUG-71800 [REG 5.12] Touchscreen scrolling isn't momentum-based anymore
-
- Closed
-
For Gerrit Dashboard: QTBUG-71370 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
245571,2 | Fix autoscrolling | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |