Fix autoscrolling

We were missing the connection between on begin frame and progressing
auto-scroll.

Change-Id: I651b35c031afedc9aeef1dc6a16547757b869633
Fixes: QTBUG-71370
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>